# mecademic_ros

mecademic_description/launch/: display_meca_500_r3.launch
mecademic_description/rviz/: display_meca_500_r3.rviz
mecademic_description/urdf/: meca_500_r3.urdf.xacro  meca_500_r3.xacro
mecademic_msgs/: CMakeLists.txt  package.xml
mecademic_msgs/msg/: EulXYZ.msg  Joints.msg  StatusRobot.msg
mecademic_msgs/srv/: GetConf.srv  GetStatusRobot.srv  MoveJoints.srv  SetConf.srv  SetJoints.srv  SetMecaPose.srv  SetPerc.srv  SetPose.srv
mecademic_robot_driver/: CMakeLists.txt  package.xml  setup.py
mecademic_robot_driver/launch/: meca500_driver.launch
mecademic_robot_driver/scripts/: mecademic_robot_driver.py  mecademic_robot_feedback.py
mecademic_robot_driver/src/: joints_controller_node.cpp
mecademic_robot_driver/src/mecademic_robot_driver/: mecademic_robot_driver.py  mecademic_robot_feedback.py
mecademic_robot_node/: CMakeLists.txt  package.xml  requirements.txt
mecademic_robot_node/src/mecademic_robot_driver/: mecademic_robot_driver.py  mecademic_robot_feedback.py
mecademic_rosclient/: CMakeLists.txt  package.xml
mecademic_rosclient/include/mecademic_rosclient/: MecademicROSClient.h
mecademic_rosclient/src/mecademic_rosclient/: MecademicROSClient.cpp
