<?xml version="1.0"?>
<package format="2">
  <name>mecademic_robot_driver</name>
  <version>1.0.2</version>
  <description>The mecademic_robot_driver package</description>

  <maintainer email="support@mecademic.com">Mecademic</maintainer>

  <license>MIT</license>

  <!--url type="website">https://github.com/Mecademic/ROS/tree/master/catkin_ws/src/mecademic_robot_node</url-->

  <author email="support@mecademic.com">Mecademic</author>
  <author email="marco.costanzo@unicampania.it">Marco Costanzo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <depend>roscpp</depend>

  <depend>mecademic_pydriver</depend>
  <depend>mecademic_msgs</depend>

  <!--build_depend>catkin_virtualenv</build_depend-->

  <export>
    <!--pip_requirements>requirements.txt</pip_requirements-->
  </export>
</package>
